--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  #sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,7 +31,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   fl_chart: ^0.36.1
-  provider: ^5.0.0
+  url_strategy: ^0.2.0
+  firebase_auth: ^3.6.3
+  firebase_core: ^1.20.1
+  cloud_firestore: ^3.4.5
+  fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
+  provider: ^6.0.3
+  auto_animated: any
+  google_fonts: ^3.0.1
+  cached_network_image: ^3.2.1
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.8
+
+
 
 dev_dependencies:
   flutter_test:
